# tcolour

./: Cargo.toml  README.md
src/: colour.rs  gradient.rs  lib.rs
