[package]
name = "tcolour"
version = "0.1.0"
license = "AGPL-3.0-or-later"
license-file = "AGPL-3.0-or-later.txt"
description = "A colour library aimed at use with Ratatui."
repository = "https://github.com/KingPEPSALT/tcolour"
homepage = "https://github.com/KingPEPSALT/tcolour"
documentation = "https://doc.rs/tcolour"
readme = "README.md"
keywords = ["colour", "color", "rust"]
categories = ["tui", "colour", "color"]
edition = "2024"

[dev-dependencies]
color-eyre = "0.6.3"
image = "0.25.6"

[dependencies]
auto_ops = "0.3.0"
approx = { version = "0.5.1", optional = true }
nalgebra = { version = "0.33.2", optional = true }
ratatui = { version = "0.29.0", optional = true }

[features]
default = ["ratatui", "approx"]
approx = ["dep:approx"]
ratatui = ["dep:ratatui"]
nalgebra = ["dep:nalgebra"]
