[package]
name = "tcolour"
version = "0.1.3"
license = "AGPL-3.0-or-later"
description = "A colour library aimed at use with Ratatui."
repository = "https://github.com/KingPEPSALT/tcolour"
homepage = "https://github.com/KingPEPSALT/tcolour"
documentation = "https://docs.rs/tcolour"
readme = "README.md"
keywords = ["colour", "color", "rust"]
categories = ["rendering", "rendering::data-formats", "multimedia"]
edition = "2024"

[dev-dependencies]
tcolour = { path = "../tcolour", features = ["dev", "image-tests"] }
color-eyre = "0.6.3"
image = "0.25.6"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
fastnoise-lite = "1.1.1"

[dependencies]
auto_ops = "0.3.0"
rand = { version = "0.9.0", optional = true }
approx = { version = "0.5.1", optional = true }
nalgebra = { version = "0.33.2", optional = true }
ratatui = { version = "0.29.0", optional = true }


[features]

deep-tests = []
image-tests = []

default = ["ratatui", "approx"]
dev = ["ratatui", "approx", "rand", "nalgebra"]
approx = ["dep:approx"]
ratatui = ["dep:ratatui"]
nalgebra = ["dep:nalgebra"]
rand = ["dep:rand"]
